internal/octogo/testdata/break_continue.ogo
// A "break" leaves the innermost enclosing "for" or "switch"; a "continue" begins
// the next iteration of the innermost enclosing "for". OctoGo has no labels, so
// neither takes one and there is nothing else they could name.

func breaks() {
	i := 0
	for {
		i++
		if i > 2 {
			break
		}
	}
	println(i)
}

func continues() {
	n := 0
	i := 0
	for i < 5 {
		i++
		if i == 2 {
			continue
		}
		n = n + i
	}
	println(n)
}

// A conditionless "for" that can break is no longer a terminating statement, so
// what follows it is reachable.
func reachable_after_break() {
	for {
		break
	}
	println(1)
}

func misplaced() {
	// ERROR "break is not in a loop or switch"
	break
}

func misplaced_continue() {
	x := 1
	switch x {
	case 1:
		// ERROR "continue is not in a loop"
		continue
	}
}
